{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 10,
  "lineage": "4c063512-2feb-19ab-3764-701c9de2428d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767857218810:vpc/vpc-03e2912aa8e4eebbd",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a4bfaae197db6acb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03c6cc2944ecf2711",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e2912aa8e4eebbd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba478ccc318afa8c",
            "owner_id": "767857218810"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767857218810:loadbalancer/app/frontend-staging-alb/414c191a441fdb93",
            "arn_suffix": "app/frontend-staging-alb/414c191a441fdb93",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-staging-alb-1167247959.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767857218810:loadbalancer/app/frontend-staging-alb/414c191a441fdb93",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-staging-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0853c80ec8f36e458"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01269038441c13296"
              },
              {
                "subnet_id": "subnet-0b021a3e24e8bc096"
              }
            ],
            "subnets": [
              "subnet-01269038441c13296",
              "subnet-0b021a3e24e8bc096"
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "vpc_id": "vpc-03e2912aa8e4eebbd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767857218810:listener/app/frontend-staging-alb/414c191a441fdb93/c9c7acf5f58e5c01",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767857218810:targetgroup/tg-frontend-staging/8deb58d7e4118b5e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767857218810:listener/app/frontend-staging-alb/414c191a441fdb93/c9c7acf5f58e5c01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767857218810:loadbalancer/app/frontend-staging-alb/414c191a441fdb93",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.frontend_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767857218810:targetgroup/tg-frontend-staging/8deb58d7e4118b5e",
            "arn_suffix": "targetgroup/tg-frontend-staging/8deb58d7e4118b5e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767857218810:targetgroup/tg-frontend-staging/8deb58d7e4118b5e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-frontend-staging",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03e2912aa8e4eebbd"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767857218810:security-group/sg-0853c80ec8f36e458",
            "description": "Permite trafico HTTP al ALB del frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0853c80ec8f36e458",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-staging-alb-sg",
            "name_prefix": "",
            "owner_id": "767857218810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2912aa8e4eebbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767857218810:security-group/sg-0c00c4df7a2b717ce",
            "description": "Permite trafico desde el ALB hacia las tareas ECS del frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Hacia el ALB del backend (HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c00c4df7a2b717ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Desde ALB al puerto del contenedor",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0853c80ec8f36e458"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "frontend-staging-ecs-sg",
            "name_prefix": "",
            "owner_id": "767857218810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Service": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e2912aa8e4eebbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.frontend_alb",
            "data.aws_vpc.shared"
          ]
        }
      ]
    }
  ]
}